--- a/src/ui/Main.fxml
+++ b/src/ui/Main.fxml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="824.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox prefHeight="400.0" prefWidth="156.0" style="-fx-background-color: #11CF9E;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="400.0" prefWidth="156.0" spacing="25.0" style="-fx-background-color: #11CF9E;" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#loadList" text="List" />
+            <Button mnemonicParsing="false" onAction="#loadList" text="List">
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin></Button>
             <Button mnemonicParsing="false" onAction="#loadSearch" text="Search" />
             <Button mnemonicParsing="false" onAction="#exitApp" text="Exit" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#test" text="Test" />
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Test methods" />
+                        <Label text="Requested by:" />
+                        <Label text="FELIPE ;)" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
          </children>
       </VBox>
    </left>
