--- a/src/ui/Search.fxml
+++ b/src/ui/Search.fxml
@@ -45,9 +45,9 @@
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <ImageView fitHeight="180.0" fitWidth="173.0" layoutX="18.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="182.0" layoutX="13.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../assets/temporal.jpg" />
+            <Image url="@../../../../OneDrive/Imágenes/male-basketball-player-avatar-man-260nw-1985400338.jpg" />
          </image>
       </ImageView>
       <Label layoutX="201.0" layoutY="286.0" text="Points:">
@@ -75,8 +75,8 @@
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <ListView layoutX="411.0" layoutY="230.0" prefHeight="233.0" prefWidth="238.0" />
-      <Label alignment="CENTER" layoutX="411.0" layoutY="200.0" text="Similar Players by Search Parameter" textAlignment="JUSTIFY">
+      <ListView layoutX="401.0" layoutY="203.0" prefHeight="233.0" prefWidth="238.0" />
+      <Label alignment="CENTER" layoutX="401.0" layoutY="168.0" text="Similar Players by Search Parameter" textAlignment="JUSTIFY">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
