--- a/src/ui/List.fxml
+++ b/src/ui/List.fxml
@@ -13,16 +13,16 @@
             <Font name="Franklin Gothic Medium Cond" size="30.0" />
          </font>
       </Label>
-      <TableView layoutX="20.0" layoutY="87.0" prefHeight="363.0" prefWidth="633.0">
+      <TableView fx:id="tvPlayers" layoutX="20.0" layoutY="87.0" prefHeight="363.0" prefWidth="633.0">
          <columns>
-            <TableColumn prefWidth="75.0" text="Name" />
-            <TableColumn text="Team" />
-            <TableColumn prefWidth="72.0" text="Age" />
-            <TableColumn prefWidth="79.0" text="Points" />
-            <TableColumn prefWidth="77.0" text="Rebounds" />
-            <TableColumn text="Blocks" />
-            <TableColumn prefWidth="70.0" text="Assists" />
-            <TableColumn prefWidth="99.0" text="Steals" />
+            <TableColumn fx:id="tcName" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="tcTeam" text="Team" />
+            <TableColumn fx:id="tcAge" prefWidth="72.0" text="Age" />
+            <TableColumn fx:id="tcPoints" prefWidth="79.0" text="Points" />
+            <TableColumn fx:id="tcRebounds" prefWidth="77.0" text="Rebounds" />
+            <TableColumn fx:id="tcBlocks" text="Blocks" />
+            <TableColumn fx:id="tcAssists" prefWidth="70.0" text="Assists" />
+            <TableColumn fx:id="tcSteals" prefWidth="99.0" text="Steals" />
          </columns>
       </TableView>
    </children>
