--- a/src/ui/Main.fxml
+++ b/src/ui/Main.fxml
@@ -9,15 +9,15 @@
 
 <BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="824.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox prefHeight="400.0" prefWidth="156.0" spacing="25.0" style="-fx-background-color: #11CF9E;" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="156.0" spacing="25.0" style="-fx-background-color: #11CF9E;" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#loadList" text="List">
+            <Button mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="60.0" text="List">
                <VBox.margin>
                   <Insets top="25.0" />
                </VBox.margin></Button>
-            <Button mnemonicParsing="false" onAction="#loadSearch" text="Search" />
-            <Button mnemonicParsing="false" onAction="#exitApp" text="Exit" />
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <Button mnemonicParsing="false" onAction="#loadSearch" prefHeight="25.0" prefWidth="60.0" text="Search" />
+            <Button mnemonicParsing="false" onAction="#exitApp" prefHeight="25.0" prefWidth="60.0" text="Exit" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#test" text="Test" />
                   <VBox prefHeight="200.0" prefWidth="100.0">
