--- a/src/ui/Search.fxml
+++ b/src/ui/Search.fxml
@@ -17,19 +17,19 @@
             <Font name="Franklin Gothic Medium Cond" size="30.0" />
          </font>
       </Label>
-      <ComboBox layoutX="146.0" layoutY="98.0" prefWidth="150.0" />
-      <Label layoutX="14.0" layoutY="99.0" text="Search Parameter:">
+      <ComboBox fx:id="cbSearchParameter" layoutX="146.0" layoutY="82.0" prefWidth="150.0" />
+      <Label layoutX="14.0" layoutY="83.0" text="Search Parameter:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="136.0" text="Search Value:">
+      <Label layoutX="45.0" layoutY="121.0" text="Search Value:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <TextField layoutX="113.0" layoutY="135.0" prefHeight="25.0" prefWidth="182.0" />
-      <Button layoutX="14.0" layoutY="166.0" mnemonicParsing="false" text="Search" />
+      <TextField fx:id="txtSearchValue" layoutX="145.0" layoutY="119.0" prefHeight="25.0" prefWidth="150.0" />
+      <Button layoutX="14.0" layoutY="166.0" mnemonicParsing="false" onAction="#searchPlayers" text="Search" />
       <Label layoutX="202.0" layoutY="220.0" text="Name:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
@@ -45,7 +45,7 @@
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <ImageView fitHeight="200.0" fitWidth="182.0" layoutX="13.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgPlayerCharacter" fitHeight="200.0" fitWidth="182.0" layoutX="13.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../OneDrive/Imágenes/male-basketball-player-avatar-man-260nw-1985400338.jpg" />
          </image>
@@ -75,7 +75,7 @@
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <ListView layoutX="401.0" layoutY="203.0" prefHeight="233.0" prefWidth="238.0" />
+      <ListView fx:id="lvSimilarPlayers" layoutX="401.0" layoutY="203.0" prefHeight="233.0" prefWidth="238.0" />
       <Label alignment="CENTER" layoutX="401.0" layoutY="168.0" text="Similar Players by Search Parameter" textAlignment="JUSTIFY">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
