--- a/src/ui/Search.fxml
+++ b/src/ui/Search.fxml
@@ -18,30 +18,30 @@
             <Font name="Franklin Gothic Medium Cond" size="30.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cbSearchParameter" layoutX="146.0" layoutY="82.0" prefWidth="150.0" />
-      <Label layoutX="14.0" layoutY="83.0" text="Search Parameter:">
+      <ComboBox fx:id="cbSearchParameter" layoutX="151.0" layoutY="65.0" prefHeight="25.0" prefWidth="140.0" />
+      <Label layoutX="14.0" layoutY="66.0" text="Search Parameter:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="45.0" layoutY="121.0" text="Search Value:">
+      <Label layoutX="45.0" layoutY="104.0" text="Search Value:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtSearchValue" layoutX="145.0" layoutY="119.0" prefHeight="25.0" prefWidth="150.0" />
-      <Button layoutX="14.0" layoutY="166.0" mnemonicParsing="false" onAction="#searchPlayers" text="Search" />
-      <Label fx:id="labPlayerName" layoutX="202.0" layoutY="220.0" prefHeight="22.0" prefWidth="150.0" text="Name:">
+      <TextField fx:id="txtSearchValue" layoutX="151.0" layoutY="103.0" prefHeight="25.0" prefWidth="140.0" />
+      <Button layoutX="151.0" layoutY="172.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="25.0" prefWidth="140.0" text="Search" />
+      <Label fx:id="labPlayerName" layoutX="200.0" layoutY="220.0" prefHeight="22.0" prefWidth="190.0" text="Name:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerAge" layoutX="201.0" layoutY="242.0" prefHeight="22.0" prefWidth="150.0" text="Age:">
+      <Label fx:id="labPlayerAge" layoutX="200.0" layoutY="242.0" prefHeight="22.0" prefWidth="190.0" text="Age:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerTeam" layoutX="201.0" layoutY="264.0" prefHeight="22.0" prefWidth="150.0" text="Team:">
+      <Label fx:id="labPlayerTeam" layoutX="199.0" layoutY="264.0" prefHeight="22.0" prefWidth="190.0" text="Team:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
@@ -51,27 +51,27 @@
             <Image url="@../../../../OneDrive/Imágenes/male-basketball-player-avatar-man-260nw-1985400338.jpg" />
          </image>
       </ImageView>
-      <Label fx:id="labPlayerPoints" layoutX="201.0" layoutY="286.0" prefHeight="22.0" prefWidth="150.0" text="Points:">
+      <Label fx:id="labPlayerPoints" layoutX="201.0" layoutY="286.0" prefHeight="22.0" prefWidth="190.0" text="Points:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerRebounds" layoutX="200.0" layoutY="308.0" prefHeight="22.0" prefWidth="150.0" text="Rebounds:">
+      <Label fx:id="labPlayerRebounds" layoutX="200.0" layoutY="308.0" prefHeight="22.0" prefWidth="190.0" text="Rebounds:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerBlocks" layoutX="199.0" layoutY="330.0" prefHeight="22.0" prefWidth="150.0" text="Blocks:">
+      <Label fx:id="labPlayerBlocks" layoutX="199.0" layoutY="330.0" prefHeight="22.0" prefWidth="190.0" text="Blocks:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerAssists" layoutX="198.0" layoutY="352.0" prefHeight="22.0" prefWidth="150.0" text="Assists:">
+      <Label fx:id="labPlayerAssists" layoutX="198.0" layoutY="352.0" prefHeight="22.0" prefWidth="190.0" text="Assists:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerSteals" layoutX="198.0" layoutY="374.0" prefHeight="22.0" prefWidth="150.0" text="Steals:">
+      <Label fx:id="labPlayerSteals" layoutX="198.0" layoutY="374.0" prefHeight="22.0" prefWidth="190.0" text="Steals:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
@@ -81,10 +81,13 @@
           <TableColumn fx:id="tcPlayerData" prefWidth="237.0" text="Players found" />
         </columns>
       </TableView>
-      <Label fx:id="warningLabel" layoutX="12.0" layoutY="410.0" prefHeight="22.0" prefWidth="363.0" textFill="RED">
+      <Label layoutX="5.0" layoutY="138.0" text="Or Search with range:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
+      <TextField fx:id="txtBegRange" layoutX="151.0" layoutY="137.0" prefHeight="25.0" prefWidth="66.0" />
+      <TextField fx:id="txtEndRange" layoutX="224.0" layoutY="137.0" prefHeight="25.0" prefWidth="66.0" />
+      <Label fx:id="labWarning" layoutX="462.0" layoutY="107.0" />
    </children>
 </Pane>
