--- a/src/ui/Search.fxml
+++ b/src/ui/Search.fxml
@@ -11,88 +11,98 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="494.0" prefWidth="673.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="529.0" prefWidth="722.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="262.0" layoutY="22.0" text="Search Player">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="30.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cbSearchParameter" layoutX="151.0" layoutY="65.0" prefHeight="25.0" prefWidth="140.0" />
-      <Label layoutX="14.0" layoutY="66.0" text="Search Parameter:">
+      <ComboBox fx:id="cbSearchParameter" layoutX="184.0" layoutY="73.0" prefHeight="25.0" prefWidth="140.0" />
+      <Label layoutX="47.0" layoutY="74.0" text="Search Parameter:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="45.0" layoutY="104.0" text="Search Value:">
+      <Label layoutX="78.0" layoutY="112.0" text="Search Value:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtSearchValue" layoutX="151.0" layoutY="103.0" prefHeight="25.0" prefWidth="140.0" />
-      <Button layoutX="151.0" layoutY="172.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="25.0" prefWidth="140.0" text="Search" />
-      <Label fx:id="labPlayerName" layoutX="200.0" layoutY="220.0" prefHeight="22.0" prefWidth="190.0" text="Name:">
+      <TextField fx:id="txtSearchValue" layoutX="184.0" layoutY="111.0" prefHeight="25.0" prefWidth="140.0" />
+      <Button layoutX="184.0" layoutY="180.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="25.0" prefWidth="140.0" text="Search" />
+      <Label fx:id="labPlayerName" layoutX="198.0" layoutY="254.0" prefHeight="22.0" prefWidth="190.0" text="Name:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerAge" layoutX="200.0" layoutY="242.0" prefHeight="22.0" prefWidth="190.0" text="Age:">
+      <Label fx:id="labPlayerAge" layoutX="197.0" layoutY="276.0" prefHeight="22.0" prefWidth="190.0" text="Age:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerTeam" layoutX="199.0" layoutY="264.0" prefHeight="22.0" prefWidth="190.0" text="Team:">
+      <Label fx:id="labPlayerTeam" layoutX="196.0" layoutY="298.0" prefHeight="22.0" prefWidth="190.0" text="Team:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <ImageView fx:id="imgPlayerCharacter" fitHeight="200.0" fitWidth="182.0" layoutX="13.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgPlayerCharacter" fitHeight="200.0" fitWidth="182.0" layoutX="13.0" layoutY="254.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../OneDrive/Imágenes/male-basketball-player-avatar-man-260nw-1985400338.jpg" />
          </image>
       </ImageView>
-      <Label fx:id="labPlayerPoints" layoutX="201.0" layoutY="286.0" prefHeight="22.0" prefWidth="190.0" text="Points:">
+      <Label fx:id="labPlayerPoints" layoutX="198.0" layoutY="320.0" prefHeight="22.0" prefWidth="190.0" text="Points:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerRebounds" layoutX="200.0" layoutY="308.0" prefHeight="22.0" prefWidth="190.0" text="Rebounds:">
+      <Label fx:id="labPlayerRebounds" layoutX="197.0" layoutY="342.0" prefHeight="22.0" prefWidth="190.0" text="Rebounds:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerBlocks" layoutX="199.0" layoutY="330.0" prefHeight="22.0" prefWidth="190.0" text="Blocks:">
+      <Label fx:id="labPlayerBlocks" layoutX="196.0" layoutY="364.0" prefHeight="22.0" prefWidth="190.0" text="Blocks:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerAssists" layoutX="198.0" layoutY="352.0" prefHeight="22.0" prefWidth="190.0" text="Assists:">
+      <Label fx:id="labPlayerAssists" layoutX="195.0" layoutY="386.0" prefHeight="22.0" prefWidth="190.0" text="Assists:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labPlayerSteals" layoutX="198.0" layoutY="374.0" prefHeight="22.0" prefWidth="190.0" text="Steals:">
+      <Label fx:id="labPlayerSteals" layoutX="195.0" layoutY="408.0" prefHeight="22.0" prefWidth="190.0" text="Steals:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <TableView fx:id="tvSimilarPlayers" layoutX="401.0" layoutY="197.0" onMouseClicked="#showPlayerInfo" prefHeight="233.0" prefWidth="238.0">
+      <TableView fx:id="tvSimilarPlayers" layoutX="465.0" layoutY="249.0" onMouseClicked="#showPlayerInfo" prefHeight="208.0" prefWidth="165.0">
         <columns>
-          <TableColumn fx:id="tcPlayerData" prefWidth="237.0" text="Players found" />
+          <TableColumn fx:id="tcPlayerData" prefWidth="162.0" text="Players found" />
         </columns>
       </TableView>
-      <Label layoutX="5.0" layoutY="138.0" text="Or Search with range:">
+      <Label layoutX="38.0" layoutY="146.0" text="Or Search with range:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtBegRange" layoutX="151.0" layoutY="137.0" prefHeight="25.0" prefWidth="66.0" />
-      <TextField fx:id="txtEndRange" layoutX="224.0" layoutY="137.0" prefHeight="25.0" prefWidth="66.0" />
-      <Label fx:id="labPlayerSearchTime" layoutX="195.0" layoutY="399.0" prefHeight="22.0" prefWidth="190.0" text="Search time:">
+      <TextField fx:id="txtBegRange" layoutX="184.0" layoutY="145.0" prefHeight="25.0" prefWidth="66.0" />
+      <TextField fx:id="txtEndRange" layoutX="257.0" layoutY="145.0" prefHeight="25.0" prefWidth="66.0" />
+      <Label fx:id="labPlayerSearchTime" layoutX="192.0" layoutY="433.0" prefHeight="22.0" prefWidth="190.0" text="Search time:">
          <font>
             <Font name="Franklin Gothic Medium Cond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="labWarning" layoutX="387.0" layoutY="107.0" />
+      <Label fx:id="labWarning" layoutX="51.0" layoutY="222.0" prefHeight="17.0" prefWidth="469.0" />
+      <TextField fx:id="txtName" layoutX="287.0" layoutY="253.0" />
+      <TextField fx:id="txtAge" layoutX="287.0" layoutY="275.0" />
+      <TextField fx:id="txtTeam" layoutX="287.0" layoutY="297.0" />
+      <TextField fx:id="txtPoints" layoutX="287.0" layoutY="319.0" />
+      <TextField fx:id="txtRebounds" layoutX="287.0" layoutY="341.0" />
+      <TextField fx:id="txtBlocks" layoutX="287.0" layoutY="363.0" />
+      <TextField fx:id="txtAssists" layoutX="287.0" layoutY="385.0" />
+      <TextField fx:id="txtSteals" layoutX="287.0" layoutY="407.0" />
+      <Button layoutX="336.0" layoutY="475.0" mnemonicParsing="false" onAction="#modifyPlayer" text="Modify" />
+      <Label layoutX="336.0" layoutY="115.0" text="use the command &quot;/ All&quot; in the search value to see all players" />
    </children>
 </Pane>
