--- a/src/ui/Main.fxml
+++ b/src/ui/Main.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="734.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
@@ -32,4 +33,11 @@
          </children>
       </VBox>
    </left>
+   <center>
+      <Label text="Espera a que carguen los árboles para evitar errores" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="Franklin Gothic Medium Cond" size="25.0" />
+         </font>
+      </Label>
+   </center>
 </BorderPane>
